# kakaia

./: .gitignore  Cargo.toml  LICENSE  README.md
archive/2019/12/30/: audio-10-09-42.flac  audio-10-09-42.txt
nlu/: dataset.json  dataset.yaml
nlu/kakaia_engine/: nlu_engine.json
nlu/kakaia_engine/custom_entity_parser/parser/: metadata.json
nlu/kakaia_engine/custom_entity_parser/parser/parser_1/: parser
nlu/kakaia_engine/custom_entity_parser/parser/parser_2/: parser
nlu/kakaia_engine/custom_entity_parser/parser/parser_3/: parser
nlu/kakaia_engine/lookup_intent_parser/: intent_parser.json
nlu/kakaia_engine/probabilistic_intent_parser/: intent_parser.json
nlu/kakaia_engine/probabilistic_intent_parser/intent_classifier/: intent_classifier.json
nlu/kakaia_engine/probabilistic_intent_parser/intent_classifier/featurizer/tfidf_vectorizer/: vectorizer.json
nlu/kakaia_engine/probabilistic_intent_parser/slot_filler_0/: model.crfsuite  slot_filler.json
nlu/kakaia_engine/probabilistic_intent_parser/slot_filler_1/: model.crfsuite
nlu/kakaia_engine/probabilistic_intent_parser/slot_filler_2/: model.crfsuite  slot_filler.json
src/: main.rs  nlu.rs  speech.rs  stopwords.rs
test/: convert-temperature.base64  set-my-timer.base64  ten-plus-ten.base64  test.base64
