[package]
name = "kakaia"
version = "0.1.1"
authors = ["Jeremy Andrews <jeremy@tag1consulting.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "^2.0"
actix-rt = "^1.0"
serde = "^1.0"
base64 = "^0.11"
tempfile = "^3.1"
audrey = "^0.2"
deepspeech = "^0.6"
chrono = "^0.4"
structopt = "^0.3"
