[package]
name = "kakaia"
version = "0.1.1"
authors = ["Jeremy Andrews <jeremy@tag1consulting.com>"]
edition = "2018"

[dependencies]
actix-web = "^2.0"
actix-rt = "^1.0"
serde = "^1.0"
serde_json ="^1.0"
base64 = "^0.11"
tempfile = "^3.1"
audrey = "^0.2"
deepspeech = "^0.6"
# Lock to 0.4.8 to match https://github.com/snipsco/rustling-ontology/blob/develop/moment/Cargo.toml
chrono = "0.4.8"
structopt = "^0.3"
natural = "^0.3"
snips-nlu-lib = { git = "https://github.com/snipsco/snips-nlu-rs", branch = "master" }