[package]
name = "kakaia"
version = "0.1.2"
authors = ["Jeremy Andrews <jeremy@tag1consulting.com>"]
edition = "2018"

[dependencies]
actix-rt = "^1.0"
actix-web = "^2.0"
audrey = "^0.2"
base64 = "^0.11"
# Lock to 0.4.8 to match https://github.com/snipsco/rustling-ontology/blob/develop/moment/Cargo.toml
chrono = "0.4.8"
deepspeech = "^0.6"
hound = "^3.4"
natural = "^0.3"
rnnoise-c = "^0.1"
serde = "^1.0"
serde_json ="^1.0"
snips-nlu-lib = { git = "https://github.com/snipsco/snips-nlu-rs", branch = "master" }
structopt = "^0.3"
tempfile = "^3.1"
